# magicpixel

./: Cargo.toml  README.org
assets/: grid.frag  old_grid.frag  simple.frag
src/: batched.rs  debug.rs  fps.rs  grid.rs  main.rs  physics.rs  render.rs  render_context.rs  save_state.rs  ui_grid.rs
