[package]
name = "magicpixel"
version = "0.1.0"
authors = ["Elijah Mirecki <elimirks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
sdl2 = "0.34"
rand = "0.8.3"

[profile.dev]
opt-level = 3

[profile.release]
debug = true
